--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -112,17 +112,17 @@
 
                      <!-- =============== -->
       <tr>
-        <td><a href=""></a></td>
+        <td><a href="https://www.lingohut.com/en/v771503/arabic-lessons-school-subjects">School subjects </a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
       <tr>
-        <td><a href=""></a></td>
+        <td><a href="https://www.lingohut.com/en/v771504/arabic-lessons-colors">Colors</a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
       <tr>
-        <td><a href=""></a></td>
+        <td><a href="https://www.lingohut.com/en/v771505/arabic-lessons-geography">Geography</a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
@@ -131,17 +131,17 @@
 
              <!-- =============== -->
       <tr>
-        <td><a href=""></a></td>
+        <td><a href="https://www.lingohut.com/en/v771506/arabic-lessons-astronomy">Astronomy</a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
       <tr>
-        <td><a href=""></a></td>
+        <td><a href="https://www.lingohut.com/en/v771507/arabic-lessons-solar-system">Solar system</a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
       <tr>
-        <td><a href=""></a></td>
+        <td><a href="https://www.lingohut.com/en/v771508/arabic-lessons-seasons-and-weather">Seasons and weather</a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
