--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -7,7 +7,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
+<style>
+  a {
+    color: rgb(56, 237, 6);
+  }
+</style>
 <body style="background-color: beige;">
+
 
 <div class="container mt-3">
   <h2 style="text-align: center;">Arbic course</h2>
