--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -355,7 +355,162 @@
 
                   <!-- =============== -->
       <tr>
-        <td><a href=""></a></td>
+        <td><a href="https://www.lingohut.com/en/v771539/arabic-lessons-meals"></a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771540/arabic-lessons-places-in-town"></a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771541/arabic-lessons-shops-in-town"></a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+        <!-- =============== -->
+
+
+                  <!-- =============== -->
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771542/arabic-lessons-things-on-the-street"></a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771543/arabic-lessons-shopping"></a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771544/arabic-lessons-shopping-for-clothes"></a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+        <!-- =============== -->
+
+
+
+                  <!-- =============== -->
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771545/arabic-lessons-negotiating-a-price"></a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771546/arabic-lessons-grocery-store"></a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771547/arabic-lessons-grocery-shopping-list"></a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+        <!-- =============== -->
+
+
+                  <!-- =============== -->
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771548/arabic-lessons-fruits"></a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771549/arabic-lessons-sweet-fruits"></a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771550/arabic-lessons-vegetables"></a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+        <!-- =============== -->
+
+                  <!-- =============== -->
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771551/arabic-lessons-healthy-vegetables"></a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771552/arabic-lessons-herbs-and-spices">Herbs and spices</a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771553/arabic-lessons-dairy-products">Dairy products</a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+        <!-- =============== -->
+
+
+
+                  <!-- =============== -->
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771554/arabic-lessons-meats-at-the-butcher-shop">Meats at the butcher shop </a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771555/arabic-lessons-seafood-market">Seafood market</a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771556/arabic-lessons-bakery">Bakery</a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+        <!-- =============== -->
+
+
+
+
+                  <!-- =============== -->
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771557/arabic-lessons-drinks">Drinks</a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771558/arabic-lessons-at-a-restaurant">At a restaurant</a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771559/arabic-lessons-the-menu">The menu</a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+        <!-- =============== -->
+
+
+
+
+                  <!-- =============== -->
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771560/arabic-lessons-food-preparation">Food preparation </a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771561/arabic-lessons-dietary-restrictions">Dietary restrictions</a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771562/arabic-lessons-how-is-the-food">How is the food?</a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+        <!-- =============== -->
+                  <!-- =============== -->
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771563/arabic-lessons-paying-the-bill">Paying the bill</a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
@@ -392,126 +547,7 @@
 
 
 
-                  <!-- =============== -->
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-        <!-- =============== -->
-
-
-                  <!-- =============== -->
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-        <!-- =============== -->
-
-                  <!-- =============== -->
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-        <!-- =============== -->
-
-
-
-                  <!-- =============== -->
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-        <!-- =============== -->
-
-
-
-
-                  <!-- =============== -->
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-        <!-- =============== -->
-
-
-
-
-                  <!-- =============== -->
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-      <tr>
-        <td><a href=""></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-        <!-- =============== -->
-
-
-        
-    </tbody>
+           
   </table>
 </div>
 
