--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -355,56 +355,17 @@
 
                   <!-- =============== -->
       <tr>
-        <td><a href="https://www.lingohut.com/en/v771539/arabic-lessons-meals"></a></td>
+        <td><a href="https://www.lingohut.com/en/v771539/arabic-lessons-meals">Meals</a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
       <tr>
-        <td><a href="https://www.lingohut.com/en/v771540/arabic-lessons-places-in-town"></a></td>
+        <td><a href="https://www.lingohut.com/en/v771540/arabic-lessons-places-in-town">Places in town</a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
       <tr>
-        <td><a href="https://www.lingohut.com/en/v771541/arabic-lessons-shops-in-town"></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-        <!-- =============== -->
-
-
-                  <!-- =============== -->
-      <tr>
-        <td><a href="https://www.lingohut.com/en/v771542/arabic-lessons-things-on-the-street"></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-      <tr>
-        <td><a href="https://www.lingohut.com/en/v771543/arabic-lessons-shopping"></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-      <tr>
-        <td><a href="https://www.lingohut.com/en/v771544/arabic-lessons-shopping-for-clothes"></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-        <!-- =============== -->
-
-
-
-                  <!-- =============== -->
-      <tr>
-        <td><a href="https://www.lingohut.com/en/v771545/arabic-lessons-negotiating-a-price"></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-      <tr>
-        <td><a href="https://www.lingohut.com/en/v771546/arabic-lessons-grocery-store"></a></td>
-        <td>AAAAAAA</td>
-        <td>AAAAAAA</td>
-      </tr>
-      <tr>
-        <td><a href="https://www.lingohut.com/en/v771547/arabic-lessons-grocery-shopping-list"></a></td>
+        <td><a href="https://www.lingohut.com/en/v771541/arabic-lessons-shops-in-town">Shops in town</a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
@@ -413,17 +374,56 @@
 
                   <!-- =============== -->
       <tr>
-        <td><a href="https://www.lingohut.com/en/v771548/arabic-lessons-fruits"></a></td>
+        <td><a href="https://www.lingohut.com/en/v771542/arabic-lessons-things-on-the-street">Things on the street</a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
       <tr>
-        <td><a href="https://www.lingohut.com/en/v771549/arabic-lessons-sweet-fruits"></a></td>
+        <td><a href="https://www.lingohut.com/en/v771543/arabic-lessons-shopping">Shopping</a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
       <tr>
-        <td><a href="https://www.lingohut.com/en/v771550/arabic-lessons-vegetables"></a></td>
+        <td><a href="https://www.lingohut.com/en/v771544/arabic-lessons-shopping-for-clothes">Shopping for clothes </a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+        <!-- =============== -->
+
+
+
+                  <!-- =============== -->
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771545/arabic-lessons-negotiating-a-price">Negotiating a price</a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771546/arabic-lessons-grocery-store">Grocery store</a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771547/arabic-lessons-grocery-shopping-list">Grocery shopping list </a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+        <!-- =============== -->
+
+
+                  <!-- =============== -->
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771548/arabic-lessons-fruits">Fruits</a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771549/arabic-lessons-sweet-fruits">Sweet fruits</a></td>
+        <td>AAAAAAA</td>
+        <td>AAAAAAA</td>
+      </tr>
+      <tr>
+        <td><a href="https://www.lingohut.com/en/v771550/arabic-lessons-vegetables">Vegetables</a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
@@ -431,7 +431,7 @@
 
                   <!-- =============== -->
       <tr>
-        <td><a href="https://www.lingohut.com/en/v771551/arabic-lessons-healthy-vegetables"></a></td>
+        <td><a href="https://www.lingohut.com/en/v771551/arabic-lessons-healthy-vegetables">Healthy vegetables</a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
