--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -594,7 +594,7 @@
       </tr>
       <tr>
         <td>78</td>
-        <td><a href=""></a></td>
+        <td><a href="https://www.lingohut.com/en/v771564/arabic-lessons-transportation"></a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
@@ -630,6 +630,126 @@
 
 
 
+
+
+
+
+
+    
+
+        <tr>
+          <td>83</td>
+          <td><a href=""></a></td>
+          <td>AAAAAAA</td>
+          <td>AAAAAAA</td>
+        </tr>
+        <tr>
+          <td>84</td>
+          <td><a href=""></a></td>
+          <td>AAAAAAA</td>
+          <td>AAAAAAA</td>
+        </tr>
+        <tr>
+          <td>85</td>
+          <td><a href=""></a></td>
+          <td>AAAAAAA</td>
+          <td>AAAAAAA</td>
+        </tr>
+          <!-- =============== -->
+
+
+
+
+          <tr>
+            <td>86</td>
+            <td><a href=""></a></td>
+            <td>AAAAAAA</td>
+            <td>AAAAAAA</td>
+          </tr>
+          <tr>
+            <td>87</td>
+            <td><a href=""></a></td>
+            <td>AAAAAAA</td>
+            <td>AAAAAAA</td>
+          </tr>
+          <tr>
+            <td>88</td>
+            <td><a href=""></a></td>
+            <td>AAAAAAA</td>
+            <td>AAAAAAA</td>
+          </tr>
+            <!-- =============== -->
+
+
+
+
+
+            <tr>
+              <td>89</td>
+              <td><a href=""></a></td>
+              <td>AAAAAAA</td>
+              <td>AAAAAAA</td>
+            </tr>
+            <tr>
+              <td>90</td>
+              <td><a href=""></a></td>
+              <td>AAAAAAA</td>
+              <td>AAAAAAA</td>
+            </tr>
+            <tr>
+              <td>91</td>
+              <td><a href=""></a></td>
+              <td>AAAAAAA</td>
+              <td>AAAAAAA</td>
+            </tr>
+              <!-- =============== -->
+
+
+
+
+              <tr>
+                <td>92</td>
+                <td><a href=""></a></td>
+                <td>AAAAAAA</td>
+                <td>AAAAAAA</td>
+              </tr>
+              <tr>
+                <td>93</td>
+                <td><a href=""></a></td>
+                <td>AAAAAAA</td>
+                <td>AAAAAAA</td>
+              </tr>
+              <tr>
+                <td>94</td>
+                <td><a href=""></a></td>
+                <td>AAAAAAA</td>
+                <td>AAAAAAA</td>
+              </tr>
+                <!-- =============== -->
+
+
+
+
+
+                <tr>
+                  <td>95</td>
+                  <td><a href=""></a></td>
+                  <td>AAAAAAA</td>
+                  <td>AAAAAAA</td>
+                </tr>
+                <tr>
+                  <td>96</td>
+                  <td><a href=""></a></td>
+                  <td>AAAAAAA</td>
+                  <td>AAAAAAA</td>
+                </tr>
+                <tr>
+                  <td>97</td>
+                  <td><a href=""></a></td>
+                  <td>AAAAAAA</td>
+                  <td>AAAAAAA</td>
+                </tr>
+                  <!-- =============== -->
            
   </table>
 </div>
