--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -232,7 +232,7 @@
           <tr>
             <td>30</td>
             <td><a href="https://www.lingohut.com/en/v771516/arabic-lessons-farm-animals">farm-animals</a></td>
-            <td>AAAAAAA</td>
+            <td>Rahim</td>
             <td>AAAAAAA</td>
           </tr>
           <tr>
@@ -510,7 +510,7 @@
       <tr>
         <td>67</td>
         <td><a href="https://www.lingohut.com/en/v771553/arabic-lessons-dairy-products">Dairy products</a></td>
-        <td>AAAAAAA</td>
+        <td>Rahim</td>
         <td>AAAAAAA</td>
       </tr>
         <!-- =============== -->
@@ -589,7 +589,7 @@
       <tr>
         <td>77</td>
         <td><a href="https://www.lingohut.com/en/v771563/arabic-lessons-paying-the-bill">Paying the bill</a></td>
-        <td>AAAAAAA</td>
+        <td>Rahim</td>
         <td>AAAAAAA</td>
       </tr>
       <tr>
