--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -35,7 +35,7 @@
       <tr>
         <td>1</th>
         <td><a href="https://www.lingohut.com/en/v771488/arabic-lessons-meeting-someone">Meeting someone</a></td>
-        <td>AAAAAAA</td>
+        <td>Clau</td>
         <td>AAAAAAA</td>
       </tr>
       <tr>
