--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -347,7 +347,7 @@
       <tr>
         <td>46</td>
         <td><a href="https://www.lingohut.com/en/v771532/arabic-lessons-rooms-in-a-house">rooms-in-a-house</a></td>
-        <td>AAAAAAA</td>
+        <td>Fuwzi</td>
         <td>AAAAAAA</td>
       </tr>
         <!-- =============== -->
@@ -600,7 +600,7 @@
       </tr>
       <tr>
         <td>79</td>
-        <td><a href=""></a></td>
+        <td><a href="https://www.lingohut.com/en/v771565/arabic-lessons-directions">direction</a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
@@ -610,19 +610,19 @@
                   <!-- =============== -->
       <tr>
         <td>80</td>
-        <td><a href=""></a></td>
+        <td><a href="https://www.lingohut.com/en/v771566/arabic-lessons-asking-for-directions">asking-for-directions</a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
       <tr>
         <td>81</td>
-        <td><a href=""></a></td>
+        <td><a href="https://www.lingohut.com/en/v771567/arabic-lessons-giving-directions">giving-directions</a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
       <tr>
         <td>82</td>
-        <td><a href=""></a></td>
+        <td><a href="https://www.lingohut.com/en/v771568/arabic-lessons-getting-around-town">getting-around-town</a></td>
         <td>AAAAAAA</td>
         <td>AAAAAAA</td>
       </tr>
@@ -639,19 +639,19 @@
 
         <tr>
           <td>83</td>
-          <td><a href=""></a></td>
+          <td><a href="https://www.lingohut.com/en/v771569/arabic-lessons-time-expressions">time-expressions</a></td>
           <td>AAAAAAA</td>
           <td>AAAAAAA</td>
         </tr>
         <tr>
           <td>84</td>
-          <td><a href=""></a></td>
+          <td><a href="https://www.lingohut.com/en/v771570/arabic-lessons-time-vocabulary">time-vocabulary</a></td>
           <td>AAAAAAA</td>
           <td>AAAAAAA</td>
         </tr>
         <tr>
           <td>85</td>
-          <td><a href=""></a></td>
+          <td><a href="https://www.lingohut.com/en/v771571/arabic-lessons-time-and-date">time-and-date</a></td>
           <td>AAAAAAA</td>
           <td>AAAAAAA</td>
         </tr>
@@ -662,19 +662,19 @@
 
           <tr>
             <td>86</td>
-            <td><a href=""></a></td>
+            <td><a href="https://www.lingohut.com/en/v771572/arabic-lessons-bodyparts">bodyparts</a></td>
             <td>AAAAAAA</td>
             <td>AAAAAAA</td>
           </tr>
           <tr>
             <td>87</td>
-            <td><a href=""></a></td>
+            <td><a href="https://www.lingohut.com/en/v771573/arabic-lessons-anatomy">anatomy</a></td>
             <td>AAAAAAA</td>
             <td>AAAAAAA</td>
           </tr>
           <tr>
             <td>88</td>
-            <td><a href=""></a></td>
+            <td><a href="https://www.lingohut.com/en/v771574/arabic-lessons-internal-organs">internal-organs</a></td>
             <td>AAAAAAA</td>
             <td>AAAAAAA</td>
           </tr>
@@ -686,19 +686,19 @@
 
             <tr>
               <td>89</td>
-              <td><a href=""></a></td>
+              <td><a href="https://www.lingohut.com/en/v771575/arabic-lessons-medical-supplies">medical-supplies</a></td>
               <td>AAAAAAA</td>
               <td>AAAAAAA</td>
             </tr>
             <tr>
               <td>90</td>
-              <td><a href=""></a></td>
+              <td><a href="https://www.lingohut.com/en/v771576/arabic-lessons-medical-office">medical-office</a></td>
               <td>AAAAAAA</td>
               <td>AAAAAAA</td>
             </tr>
             <tr>
               <td>91</td>
-              <td><a href=""></a></td>
+              <td><a href="https://www.lingohut.com/en/v771577/arabic-lessons-doctor-i-am-sick">i-am-sick</a></td>
               <td>AAAAAAA</td>
               <td>AAAAAAA</td>
             </tr>
@@ -709,19 +709,19 @@
 
               <tr>
                 <td>92</td>
-                <td><a href=""></a></td>
+                <td><a href="https://www.lingohut.com/en/v771578/arabic-lessons-doctor-i-am-hurt">i-am-hurt</a></td>
                 <td>AAAAAAA</td>
                 <td>AAAAAAA</td>
               </tr>
               <tr>
                 <td>93</td>
-                <td><a href=""></a></td>
+                <td><a href="https://www.lingohut.com/en/v771579/arabic-lessons-doctor-i-have-a-cold">i-have-a-cold</a></td>
                 <td>AAAAAAA</td>
                 <td>AAAAAAA</td>
               </tr>
               <tr>
                 <td>94</td>
-                <td><a href=""></a></td>
+                <td><a href="https://www.lingohut.com/en/v771580/arabic-lessons-airport-and-departure">airport-and-departure</a></td>
                 <td>AAAAAAA</td>
                 <td>AAAAAAA</td>
               </tr>
@@ -733,19 +733,19 @@
 
                 <tr>
                   <td>95</td>
-                  <td><a href=""></a></td>
+                  <td><a href="https://www.lingohut.com/en/v771581/arabic-lessons-immigration-and-customs">immigration-and-customs</a></td>
                   <td>AAAAAAA</td>
                   <td>AAAAAAA</td>
                 </tr>
                 <tr>
                   <td>96</td>
-                  <td><a href=""></a></td>
+                  <td><a href="https://www.lingohut.com/en/v771582/arabic-lessons-traveling-on-an-airplane">traveling-on-an-airplane</a></td>
                   <td>AAAAAAA</td>
                   <td>AAAAAAA</td>
                 </tr>
                 <tr>
                   <td>97</td>
-                  <td><a href=""></a></td>
+                  <td><a href="https://www.lingohut.com/en/v771583/arabic-lessons-arrival-and-baggage">arrival-and-baggage</a></td>
                   <td>AAAAAAA</td>
                   <td>AAAAAAA</td>
                 </tr>
