--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -594,7 +594,7 @@
       </tr>
       <tr>
         <td>78</td>
-        <td><a href="https://www.lingohut.com/en/v771564/arabic-lessons-transportation"></a></td>
+        <td><a href="https://www.lingohut.com/en/v771564/arabic-lessons-transportation">transportation</a></td>
         <td> </td>
         <td> </td>
       </tr>
