--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -846,5 +846,209 @@
   </table>
 </div>
 
+
+
+
+<!-- ==============READING START -->
+<!-- ==============READING START -->
+<!-- ==============READING START -->
+<!-- ==============READING START -->
+<!-- ==============READING START -->
+
+<div class="container mt-3">
+    <h2 style="text-align: center;">READING COURSE</h2>
+    <p style="color: blue;text-align: center;">READING COURSE</p>            
+    <table class="table table-dark table-hover">
+      <thead>
+        <tr>
+          <th>Item</th>
+          <th>Descrption</th>
+          <th>Name</th>
+        </tr>
+      </thead>
+      <tbody>
+  
+  
+          <!-- =============== -->
+        <tr>
+          <td>1</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book1-page106.html">اين احمد</a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book1-page210.html">اسرة عبد العزيز</a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book1-page213.html">حجرة الجلوس</a></td>
+          <td> </td>
+        </tr>
+          <!-- =============== -->
+       <!-- =============== -->
+       <tr>
+          <td>4</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book1-page216.html">هشام يذهب الي السوق</a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page006.html">المدرس الجديد</a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page015.html">السفر الي مكة</a></td>
+          <td> </td>
+        </tr>
+          <!-- =============== -->
+               <!-- =============== -->
+        <tr>
+          <td>7</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/">عائلة احمد</a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>8</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page136.html">الدراسة في الكويت </a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>9</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page144.html">والدة عائشة مريضة</a></td>
+          <td> </td>
+        </tr>
+          <!-- =============== -->
+               <!-- =============== -->
+        <tr>
+          <td>10</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page152.html">تأخر ياسر</a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>11</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page159.html">عائلة نيجيرية</a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>12</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page033.html">في بيت عمر</a></td>
+          <td> </td>
+        </tr>
+          <!-- =============== -->
+  
+  
+                 <!-- =============== -->
+        <tr>
+          <td>13</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page042.html">المطار الجديد</a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>14</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page168.html">رسالة من الرياض</a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>15</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page049.html">الذهاب الي المدرسة</a></td>
+          <td> </td>
+        </tr>
+          <!-- =============== -->
+  
+  
+  
+  
+                 <!-- =============== -->
+        <tr>
+          <td>16</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page178.html">اصابة ابراهيم</a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>17</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page058.html">اين حقيبةابراهيم </a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>18</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page187.html">تساعد فاطمة عائلتها </a></td>
+          <td> </td>
+        </tr>
+          <!-- =============== -->
+  
+  
+  
+  
+                 <!-- =============== -->
+        <tr>
+          <td>19</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page067.html">طالب اندونيسي </a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>20</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page195.html">الرحلة الي العاصمة</a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>21</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page076.html">دراجة محمد</a></td>
+          <td> </td>
+        </tr>
+          <!-- =============== -->
+  
+  
+  
+  
+                 <!-- =============== -->
+        <tr>
+          <td>22</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page203.html">صديقي في المستشفي</a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>23</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page085.html">زيارة عم عثمان</a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>24</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page210.html">فضل صلاة الجماعة</a></td>
+          <td> </td>
+        </tr>
+          <!-- =============== -->
+  
+  
+  
+  
+                 <!-- =============== -->
+        <tr>
+          <td>25</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page093.html">هوايات عمر </a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>26</td>
+          <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page218.html">شهر رمضان</a></td>
+          <td> </td>
+        </tr>
+        <tr>
+          <td>27</td>
+          <td><a href="https://arabic.ba/practice/reading/">all reading</a></td>
+          <td> </td>
+        </tr>
+          <!-- =============== -->
+          
+      </tbody>
+    </table>
+  </div>
+  
+
+
+
+
+
 </body>
 </html>
