--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -699,7 +699,7 @@
             <tr>
               <td>91</td>
               <td><a href="https://www.lingohut.com/en/v771577/arabic-lessons-doctor-i-am-sick">i-am-sick</a></td>
-              <td> </td>
+              <td>Rahim </td>
               <td> </td>
             </tr>
               <!-- =============== -->
