--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -980,7 +980,7 @@
         <tr>
           <td>1</td>
           <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book1-page106.html">اين احمد</a></td>
-          <td> </td>
+          <td>Rahim </td>
         </tr>
         <tr>
           <td>2</td>
