--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -1155,6 +1155,203 @@
 
 
 
+<div class="container mt-3">
+  <h2 style="text-align: center;">GENERAL</h2>
+  <p style="color: blue;text-align: center;">GENERAL</p>            
+  <table class="table table-dark table-hover">
+    <thead>
+      <tr>
+        <th>Item</th>
+        <th>Descrption</th>
+        <th>Note</th>
+      </tr>
+    </thead>
+    <tbody>
+
+
+        <!-- =============== -->
+      <tr>
+        <td>1</td>
+        <td><a href="https://www.englishspeak.com/ar/english-phrases">1000 الإنجليزية العبارات الأكثر شيوعا
+
+        </a></td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+        <!-- =============== -->
+     <!-- =============== -->
+     <tr>
+        <td>4</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>5</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>6</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+        <!-- =============== -->
+             <!-- =============== -->
+      <tr>
+        <td>7</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>8</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>9</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+        <!-- =============== -->
+             <!-- =============== -->
+      <tr>
+        <td>10</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>11</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>12</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+        <!-- =============== -->
+
+
+               <!-- =============== -->
+      <tr>
+        <td>13</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>14</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>15</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+        <!-- =============== -->
+
+
+
+
+               <!-- =============== -->
+      <tr>
+        <td>16</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>17</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>18</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+        <!-- =============== -->
+
+
+
+
+               <!-- =============== -->
+      <tr>
+        <td>19</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>20</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>21</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+        <!-- =============== -->
+
+
+
+
+               <!-- =============== -->
+      <tr>
+        <td>22</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>23</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>24</td>
+        <td><a href=""></a></td>
+        <td> </td>
+      </tr>
+        <!-- =============== -->
+
+
+
+
+               <!-- =============== -->
+      <tr>
+        <td>25</td>
+        <td> </td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>26</td>
+        <td> </td>
+        <td> </td>
+      </tr>
+      <tr>
+        <td>27</td>
+        <td> </td>
+        <td> </td>
+      </tr>
+        <!-- =============== -->
+        
+    </tbody>
+  </table>
+</div>
+
+</body>
+</html>
+
+
+
 
 
 </body>
