--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -5,7 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="icon" type="image/x-icon" href="https://samerguda.github.io/MY-SOCIAL-NETWORKS-Samer-Alsaadni/my_connections/samerphoto.jpeg">
+
 </head>
 
 <style>
