--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -614,13 +614,13 @@
       <tr>
         <td>80</td>
         <td><a href="https://www.lingohut.com/en/v771566/arabic-lessons-asking-for-directions">asking-for-directions</a></td>
-        <td> </td>
+        <td>Fawzi </td>
         <td> </td>
       </tr>
       <tr>
         <td>81</td>
         <td><a href="https://www.lingohut.com/en/v771567/arabic-lessons-giving-directions">giving-directions</a></td>
-        <td> </td>
+        <td>Fawzi </td>
         <td> </td>
       </tr>
       <tr>
