--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -1039,7 +1039,7 @@
         <tr>
           <td>11</td>
           <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book2-page159.html">عائلة نيجيرية</a></td>
-          <td> </td>
+          <td>Fawzi </td>
         </tr>
         <tr>
           <td>12</td>
