--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -920,7 +920,7 @@
 <tr>
   <td>120</td>
   <td><a href="https://www.lingohut.com/en/v771606/arabic-lessons-indefinite-pronouns-and-linking-words">linking-words</a></td>
-  <td> </td>
+  <td> Fawzi </td>
   <td> </td>
 </tr>
 <tr>
