--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -988,12 +988,12 @@
         <tr>
           <td>2</td>
           <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book1-page210.html">اسرة عبد العزيز</a></td>
-          <td> </td>
+          <td> Rahim</td>
         </tr>
         <tr>
           <td>3</td>
           <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book1-page213.html">حجرة الجلوس</a></td>
-          <td> </td>
+          <td>Rahim </td>
         </tr>
           <!-- =============== -->
        <!-- =============== -->
