--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -38,7 +38,7 @@
       <tr>
         <td>1</th>
         <td><a href="https://www.lingohut.com/en/v771488/arabic-lessons-meeting-someone">Meeting someone</a></td>
-        <td>Clau</td>
+        <td>Clau - Marc</td>
         <td> </td>
       </tr>
       <tr>
@@ -70,7 +70,7 @@
       <tr>
             <th>6</th>
         <td><a href="https://www.lingohut.com/en/v771493/arabic-lessons-days-of-the-week">Days of the week </a></td>
-        <td> </td>
+        <td>Marc </td>
         <td> </td>
       </tr>
         <!-- =============== -->
@@ -84,13 +84,13 @@
       <tr>
         <td>8</td>
         <td><a href="https://www.lingohut.com/en/v771495/arabic-lessons-numbers-1-through-10">Numbers 1 through 10 </a></td>
-        <td> </td>
+        <td> Marc</td>
         <td> </td>
       </tr>
       <tr>
         <td>9</td>
         <td><a href="https://www.lingohut.com/en/v771496/arabic-lessons-numbers-11-through-20">Numbers 11 through 20</a></td>
-        <td> </td>
+        <td>Marc </td>
         <td> </td>
       </tr>
         <!-- =============== -->
@@ -98,13 +98,13 @@
       <tr>
         <td>10</td>
         <td><a href="https://www.lingohut.com/en/v771497/arabic-lessons-numbers-21-through-30">Numbers 21 through 30</a></td>
-        <td> </td>
+        <td> Marc</td>
         <td> </td>
       </tr>
       <tr>
         <td>11</td>
         <td><a href="https://www.lingohut.com/en/v771498/arabic-lessons-numbers-10-through-100">Numbers 10 through 100</a></td>
-        <td> </td>
+        <td>Marc </td>
         <td> </td>
       </tr>
       <tr>
@@ -147,7 +147,7 @@
       <tr>
         <td>17</td>
         <td><a href="https://www.lingohut.com/en/v771504/arabic-lessons-colors">Colors</a></td>
-        <td> </td>
+        <td> Marc</td>
         <td> </td>
       </tr>
       <tr>
