--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -19,7 +19,7 @@
 <body style="background-color: beige;">
 
 
-<div class="container mt-3">
+<div id="password-form" class="container mt-3">
   <h2 style="text-align: center;">Arbic course</h2>
   <p style="color: blue;text-align: center;">VOCAB</p>            
   <table class="table table-dark table-hover">
@@ -147,7 +147,7 @@
       <tr>
         <td>17</td>
         <td><a href="https://www.lingohut.com/en/v771504/arabic-lessons-colors">Colors</a></td>
-        <td> Marc</td>
+        <td> Marc(RAC)</td>
         <td> </td>
       </tr>
       <tr>
