--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -147,7 +147,7 @@
       <tr>
         <td>17</td>
         <td><a href="https://www.lingohut.com/en/v771504/arabic-lessons-colors">Colors</a></td>
-        <td> Marc(RAC)</td>
+        <td> Marc-Rabibi(RAC)</td>
         <td> </td>
       </tr>
       <tr>
