--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -19,7 +19,7 @@
 <body style="background-color: beige;">
 
 
-<div id="password-form" class="container mt-3">
+<div id="protected-content"  class="container mt-3">
   <h2 style="text-align: center;">Arbic course</h2>
   <p style="color: blue;text-align: center;">VOCAB</p>            
   <table class="table table-dark table-hover">
