--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -965,7 +965,7 @@
 <!-- ==============READING START -->
 <!-- ==============READING START -->
 
-<div class="container mt-3">
+<div id="protected-content" class="container mt-3">
     <h2 style="text-align: center;">READING COURSE</h2>
     <p style="color: blue;text-align: center;">READING COURSE</p>            
     <table class="table table-dark table-hover">
@@ -1158,7 +1158,7 @@
 
 
 
-<div class="container mt-3">
+<div id="protected-content" class="container mt-3">
   <h2 style="text-align: center;">GENERAL</h2>
   <p style="color: blue;text-align: center;">GENERAL</p>            
   <table class="table table-dark table-hover">
