--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -1158,7 +1158,7 @@
 
 
 
-<div id="protected-content" class="container mt-3">
+<div  class="container mt-3">
   <h2 style="text-align: center;">GENERAL</h2>
   <p style="color: blue;text-align: center;">GENERAL</p>            
   <table class="table table-dark table-hover">
@@ -1397,7 +1397,7 @@
     <h2>Protected Content</h2>
     <p>This content is protected by a password.</p>
   </div>
-  
+
 <!-- =========password======== -->
 
 </body>
