--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -983,7 +983,7 @@
         <tr>
           <td>1</td>
           <td><a href="https://arabic.ba/practice/reading/arabic-for-beginners/book1-page106.html">اين احمد</a></td>
-          <td>Rahim </td>
+          <td>Rahim-Rabib(RAC) </td>
         </tr>
         <tr>
           <td>2</td>
