--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -604,7 +604,7 @@
       <tr>
         <td>79</td>
         <td><a href="https://www.lingohut.com/en/v771565/arabic-lessons-directions">direction</a></td>
-        <td> </td>
+        <td>Fawzi </td>
         <td> </td>
       </tr>
         <!-- =============== -->
