--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -387,13 +387,13 @@
       <tr>
         <td>50</td>
         <td><a href="https://www.lingohut.com/en/v771536/arabic-lessons-bathroom-accessories">bathroom-accessories</a></td>
-        <td> </td>
+        <td>Rahim </td>
         <td> </td>
       </tr>
       <tr>
         <td>51</td>
         <td><a href="https://www.lingohut.com/en/v771537/arabic-lessons-kitchen-appliances-and-utensils">kitchen-appliances-and-utensils</a></td>
-        <td> </td>
+        <td> Rahim</td>
         <td> </td>
       </tr>
       <tr>
@@ -1402,7 +1402,6 @@
 
 </body>
 </html>
-
 
 
 
