--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -38,13 +38,13 @@
       <tr>
         <td>1</th>
         <td><a href="https://www.lingohut.com/en/v771488/arabic-lessons-meeting-someone">Meeting someone</a></td>
-        <td>Clau - Marc</td>
+        <td> Kator- Clau - Marc</td>
         <td> </td>
       </tr>
       <tr>
         <td>2</th>
         <td><a href="https://www.lingohut.com/en/v771489/arabic-lessons-please-and-thank-you">Please and thank you </a></td>
-        <td> </td>
+        <td> Kator </td>
         <td> </td>
       </tr>
       <tr>
