--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -84,7 +84,7 @@
       <tr>
         <td>8</td>
         <td><a href="https://www.lingohut.com/en/v771495/arabic-lessons-numbers-1-through-10">Numbers 1 through 10 </a></td>
-        <td> Marc</td>
+        <td> Kator- Marc</td>
         <td> </td>
       </tr>
       <tr>
