--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -38,7 +38,7 @@
       <tr>
         <td>1</th>
         <td><a href="https://www.lingohut.com/en/v771488/arabic-lessons-meeting-someone">Meeting someone</a></td>
-        <td> Kator- Clau - Marc</td>
+        <td> pedro- Kator- Clau - Marc</td>
         <td> </td>
       </tr>
       <tr>
@@ -70,7 +70,7 @@
       <tr>
             <th>6</th>
         <td><a href="https://www.lingohut.com/en/v771493/arabic-lessons-days-of-the-week">Days of the week </a></td>
-        <td>Marc </td>
+        <td>pedro-Marc </td>
         <td> </td>
       </tr>
         <!-- =============== -->
@@ -84,7 +84,7 @@
       <tr>
         <td>8</td>
         <td><a href="https://www.lingohut.com/en/v771495/arabic-lessons-numbers-1-through-10">Numbers 1 through 10 </a></td>
-        <td> Kator- Marc</td>
+        <td> pedro- Kator- Marc</td>
         <td> </td>
       </tr>
       <tr>
