--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -899,7 +899,7 @@
 <tr>
   <td>117</td>
   <td><a href="https://www.lingohut.com/en/v771603/arabic-lessons-personal-pronouns">personal-pronouns</a></td>
-  <td> </td>
+  <td>Pedro </td>
   <td> </td>
 </tr>
 <tr>
