--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -110,7 +110,7 @@
       <tr>
         <td>12</td>
         <td><a href="https://www.lingohut.com/en/v771499/arabic-lessons-numbers-100-through-1000">Numbers 100 through 1000</a></td>
-        <td> </td>
+        <td>Marc </td>
         <td> </td>
       </tr>
         <!-- =============== -->
@@ -118,7 +118,7 @@
       <tr>
         <td>13</td>
         <td><a href="https://www.lingohut.com/en/v771500/arabic-lessons-numbers-1000-through-10000">Numbers 1000 through 10000 </a></td>
-        <td> </td>
+        <td>Marc </td>
         <td> </td>
       </tr>
       <tr>
