--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -914,7 +914,7 @@
  <tr>
   <td>119</td>
   <td><a href="https://www.lingohut.com/en/v771605/arabic-lessons-questions">questions</a></td>
-  <td> Pedro </td>
+  <td> Pedro - Marc </td>
   <td> </td>
 </tr>
 <tr>
