--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -275,7 +275,7 @@
           <tr>
             <td>36</td>
             <td><a href="https://www.lingohut.com/en/v771522/arabic-lessons-extended-family-members">extended-family-members</a></td>
-            <td>Rabib(RAC) </td>
+            <td>Rabib(RAC 80%) </td>
             <td> </td>
           </tr>
           <tr>
