--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -275,13 +275,13 @@
           <tr>
             <td>36</td>
             <td><a href="https://www.lingohut.com/en/v771522/arabic-lessons-extended-family-members">extended-family-members</a></td>
-            <td>Rabib(RAC 80%) </td>
+            <td>Rabib(RAC 100%) </td>
             <td> </td>
           </tr>
           <tr>
             <td>37</td>
             <td><a href="https://www.lingohut.com/en/v771523/arabic-lessons-friends">lessons-friends</a></td>
-            <td> </td>
+            <td>(RAC 30%) </td>
             <td> </td>
           </tr>
             <!-- =============== -->
@@ -291,7 +291,7 @@
       <tr>
         <td>38</td>
         <td><a href="https://www.lingohut.com/en/v771524/arabic-lessons-family-relations">family-relations</a></td>
-        <td> </td>
+        <td> (RAC 30%)</td>
         <td> </td>
       </tr>
       <tr>
