--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -350,7 +350,7 @@
       <tr>
         <td>46</td>
         <td><a href="https://www.lingohut.com/en/v771532/arabic-lessons-rooms-in-a-house">rooms-in-a-house</a></td>
-        <td>Fuwzi</td>
+        <td>Fuwzi(70%)</td>
         <td> </td>
       </tr>
         <!-- =============== -->
